src/BadScript.Tests/tests/passing/types/class/debugString.bs
class TestType
{
	
}
Environment.Debug(new TestType())
return true