src/BadScript.Tests/tests/failing/invalid-operations/missing_property_05.bs
class TestClass
{
	
}

c = new TestClass()
a = c.a